# deal.II_Crash_Course_2023

./: .gitignore  README.md
session_1/: main.cc
session_1/solution/: CMakeLists.txt  main.cc
session_2/: CMakeLists.txt  main.cc
session_2/solution/: main.cc
